# MiniGC

./: .gitignore  LICENSE  MiniGC.sln  README.md  host_trace.txt  launch-with-gcloader.sh
.github/workflows/: build.yml
ConsoleApp1/: ConsoleApp1.csproj  Program.cs  launch-with-gcloader.cmd
ConsoleApp1/Properties/: launchSettings.json
GcDemo/: Program.cs
MiniGC/: CMakeLists.txt  MiniGC - 副本.vcxproj  MiniGC.cpp  MiniGC.sln  MiniGC.vcxproj  MiniGC.vcxproj.filters  MiniGCHandleManager.cpp  MiniGCHandleManager.h  MiniGCHandleStore.cpp  MiniGCHandleStore.h  MiniGCHeap.cpp  MiniGCHeap.h  MiniGCHeapConstants.h  MiniGCPlatform.h  dllmain.cpp  framework.h  pch.cpp  pch.h
MiniGC/include/coreclr/gc/: gcdesc.h  gcinterface.dacvars.def
MiniGC/include/coreclr/gc/env/: gcenv.base.h
MiniGC/include/coreclr/inc/: debugmacros.h  stacktrace.h
